Add usage examples for JVM in README.md, including setup and composable integration